PROJECT(CpuProfilerExample)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# usage "cmake -DUSE_CPU_PROFILER=ON .." or "cmake -DUSE_CPU_PROFILER=OFF .."
MESSAGE(STATUS USE_CPU_PROFILER=${USE_CPU_PROFILER})

SET(SRC main.cpp)
INCLUDE_DIRECTORIES()
LINK_DIRECTORIES($ENV{GPERFTOOLS_ROOT}/lib)

ADD_EXECUTABLE(CpuProfilerExample ${SRC})

TARGET_LINK_LIBRARIES(CpuProfilerExample pthread)

IF(USE_CPU_PROFILER)
    TARGET_LINK_LIBRARIES(CpuProfilerExample profiler)
ENDIF()

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)